--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "types": "./dist1/index.d.ts",
   "scripts": {
     "build": "tsc",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "serve":"tsc && node dist1/index.js"
+    "test": "mocha -r ts-node/register test/**.spec.ts",
+    "serve": "tsc && node dist1/index.js"
   },
   "repository": {
     "type": "git",
@@ -16,7 +16,12 @@
   "author": "Durgesh Rathod",
   "license": "ISC",
   "devDependencies": {
-    "typescript": "^3.5.3"
+    "typescript": "^3.5.3",
+    "chai": "^4.2.0",
+    "mocha": "^6.2.0",
+    "ts-node": "^7.0.1",
+    "@types/chai": "^4.1.4",
+    "@types/mocha": "^5.2.5"
   },
   "dependencies": {
     "@types/node": "^12.6.3"
